gitops-conf/bgd-route.yaml
apiVersion: route.openshift.io/v1		
kind: Route
		
metadata:
  name: bgd-route
  labels:		
    app: bgd		
    app.kubernetes.io/instance: bgd-app
spec:		
  host: bgd.apps.ocp-demo.aws.elostech.cz		
  port:		
    targetPort: 8080		
  to:		
    kind: Service		
    name: bgd		
    weight: 100		
  wildcardPolicy: None
